# guobaplay

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  guobaplay.service
.github/workflows/: docker-publish.yml
scripts/: create.sql
src/: commands.rs  hits.rs  main.rs  main.rs.bak  tracklist.rs
