[package]
name = "guobaplay-rs"
version = "0.1.0"
authors = ["Ryan Chen <ryanjchen2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.songbird]
features = ["builtin-queue"]
version = "0.2.0"

[dependencies.serenity]
version = "0.10"
features = ["cache", "standard_framework", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
